--- a/package.json
+++ b/package.json
@@ -18,36 +18,52 @@
     "lint:js": "eslint .",
     "start": "ember serve",
     "test": "ember test",
-    "test:all": "ember try:each"
+    "test:all": "ember try:each",
+    "prepublishOnly": "ember ts:precompile",
+    "postpublish": "ember ts:clean"
   },
   "dependencies": {
-    "ember-cli-babel": "^7.1.2"
+    "@glimmer/tracking": "^0.14.0-alpha.4",
+    "ember-auto-import": "^1.2.21",
+    "ember-cli-babel": "^7.7.3",
+    "ember-cli-htmlbars": "^3.0.1",
+    "ember-cli-typescript": "^2.0.0",
+    "ember-inflector": "^3.0.0",
+    "wolkenkit-client": "^3.1.0"
   },
   "devDependencies": {
-    "@ember/optional-features": "^0.6.3",
-    "broccoli-asset-rev": "^2.7.0",
-    "ember-cli": "github:ember-cli/ember-cli",
-    "ember-cli-dependency-checker": "^3.0.0",
-    "ember-cli-eslint": "^4.2.3",
-    "ember-cli-htmlbars": "^3.0.0",
-    "ember-cli-htmlbars-inline-precompile": "^1.0.3",
-    "ember-cli-inject-live-reload": "^1.8.2",
+    "@ember/optional-features": "^0.7.0",
+    "@types/ember": "^3.1.0",
+    "@types/ember-qunit": "^3.4.6",
+    "@types/ember-test-helpers": "^1.0.5",
+    "@types/ember-testing-helpers": "^0.0.3",
+    "@types/ember__test-helpers": "^0.7.8",
+    "@types/qunit": "^2.5.4",
+    "@types/rsvp": "^4.0.2",
+    "broccoli-asset-rev": "3.0.0",
+    "ember-cli": "github:ember-cli/ember-cli#2551e2b260790f2e83c2ed2ce4dbe90299b525b2",
+    "ember-cli-dependency-checker": "^3.1.0",
+    "ember-cli-eslint": "^5.1.0",
+    "ember-cli-htmlbars-inline-precompile": "^2.1.0",
+    "ember-cli-inject-live-reload": "^2.0.1",
     "ember-cli-sri": "^2.1.1",
     "ember-cli-template-lint": "^1.0.0-beta.1",
     "ember-cli-uglify": "^2.1.0",
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
-    "ember-load-initializers": "^1.1.0",
+    "ember-load-initializers": "^2.0.0",
     "ember-maybe-import-regenerator": "^0.1.6",
-    "ember-qunit": "^3.4.1",
-    "ember-resolver": "^5.0.1",
-    "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/canary/shas/caa2c70d40dbfeffb0e6c9ac15ff6d72c8e24bae.tgz",
+    "ember-qunit": "^4.4.1",
+    "ember-resolver": "ember-cli/ember-resolver#297/head",
+    "ember-simple-auth": "^1.8.2",
+    "ember-source": "https://s3.amazonaws.com/builds.emberjs.com/canary/shas/d712624c6b33a6765c677372529d5b8fd5c3be6c.tgz",
     "ember-source-channel-url": "^1.1.0",
     "ember-try": "^1.0.0",
-    "eslint-plugin-ember": "^5.2.0",
-    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-ember": "^6.3.0",
+    "eslint-plugin-node": "^8.0.1",
     "loader.js": "^4.7.0",
-    "qunit-dom": "^0.8.0"
+    "qunit-dom": "^0.8.4",
+    "typescript": "^3.3.4000"
   },
   "engines": {
     "node": "6.* || 8.* || >= 10.*"
